adjusted tests to check for duplicate matches across schedule